# GTM

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  render.yaml  tree.txt
.claude/commands/: gtm-agent-run.md  gtm-approve.md  gtm-cycle-start.md  (+6 more)
_python_reference/: README.md  gtm.py  pyproject.toml
_python_reference/core/: __init__.py  approval_engine.py  base_agent.py  context_bus.py  llm_client.py  orchestrator.py  prompt_renderer.py  question_manager.py  state.py  tenant_loader.py
_python_reference/core/schemas/: __init__.py  agent_spec.py  handoff.py  policies.py  questions.py  tenant_profile.py
_python_reference/core/schemas/artifacts/: __init__.py
_python_reference/tests/: conftest.py  test_approval_engine.py  test_context_bus.py  test_llm_client.py  test_orchestrator_dryrun.py  test_prompt_renderer.py  test_question_manager.py  test_schemas.py  test_state.py  test_tenant_loader.py
agents/: AGENTS.md
backend/: package-lock.json  package.json  server.js
docs/: ADDING_A_VERTICAL_PACK.md  ARCHITECTURE.md  DATA_FLOW.md  HOW_IT_WORKS.md  PROMPT_CI_REFERENCE.md  QUICKSTART.md  STATE_LAYOUT.md  WORKSTREAMS.md  WORKSTREAM_A_VERIFICATION.md  WORKSTREAM_B_VERIFICATION.md  WORKSTREAM_C_VERIFICATION.md  WORKSTREAM_D_VERIFICATION.md
evals/: promptfoo.yaml
governance/: approval_policies.yaml  audit_log.jsonl  policies.md
prompts/: _registry.yaml
schemas/: README.md  agent_spec.schema.json  handoff.schema.json  policies.schema.json  question_set.schema.json  tenant_profile.schema.json
ui/: package-lock.json  package.json
workflows/: cycle.yaml
(+285 files in other folders)
