[project]
name = "universal-gtm-os"
version = "0.1.0"
description = "Universal AI GTM Operating System — industry/LOB/motion-agnostic multi-agent platform"
requires-python = ">=3.11"
authors = [{ name = "Compunnel GTM" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
]
vector = [
    "chromadb>=0.4.24",
]
postgres = [
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.5",
    "alembic>=1.13.0",
]

[project.scripts]
gtm = "gtm:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gtm"]

[tool.setuptools.packages.find]
include = ["core*", "agents*", "shared_services*", "integrations*"]
